--- a/nephelios-v1/src/css/custom.css
+++ b/nephelios-v1/src/css/custom.css
@@ -6,25 +6,30 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #206897;
+  --ifm-color-primary-dark: #123456;
+  --ifm-color-primary-darker: #0f2e3e;
+  --ifm-color-primary-darkest: #0c2531;
+  --ifm-color-primary-light: #abcdef;
+  --ifm-color-primary-lighter: #bcddef;
+  --ifm-color-primary-lightest: #cdefff;
+  --ifm-code-font-size: 100%;
+  --ifm-color-light-text: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #89C1E6;
+  --ifm-color-primary-dark: #123456;
+  --ifm-color-primary-darker: #0f2e3e;
+  --ifm-color-primary-darkest: #0c2531;
+  --ifm-color-primary-light: #abcdef;
+  --ifm-color-primary-lighter: #bcddef;
+  --ifm-color-primary-lightest: #cdefff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+article p,article li,article dl,article dt,article dd {
+  font-size: 1.1rem;
 }
